# doodle

./: .gitignore  CMakeLists.txt  main.cpp  main.frag  main.vert
doodle/: gl.cpp  gl.h  main.cpp
